Fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 html {
-  @apply dark;
+  @apply bg-black text-white;
 }
